generated/auth/apps-v1.StatefulSet-pocket-id.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pocket-id
  namespace: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      name: pocket-id
  template:
    metadata:
      labels:
        name: pocket-id
    spec:
      containers:
      - env:
        - name: ANALYTICS_DISABLED
          value: "true"
        - name: APP_URL
          value: https://auth.harflix.lol
        - name: PGID
          value: "1000"
        - name: PUID
          value: "1000"
        - name: TRUST_PROXY
          value: "true"
        image: ghcr.io/pocket-id/pocket-id:v1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: 1411
          initialDelaySeconds: 10
        name: pocket-id
        readinessProbe:
          httpGet:
            path: /healthz
            port: 1411
          initialDelaySeconds: 10
        resources:
          limits:
            cpu: "1"
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
        securityContext:
          runAsGroup: 1000
          runAsUser: 1000
        volumeMounts:
        - mountPath: /app/data
          name: pocket-id-data
      volumes:
      - name: pocket-id-data
        persistentVolumeClaim:
          claimName: pocket-id-data
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: pocket-id-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: local-path
