generated/auth/v1.Service-pocket-id.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: pocket-id
  name: pocket-id
  namespace: auth
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    name: pocket-id
