generated/auth/gateway.networking.k8s.io-v1.HTTPRoute-pocket-id.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocket-id
  namespace: auth
spec:
  hostnames:
  - auth.o5s.lol
  parentRefs:
  - name: nginx-gateway
    namespace: network
  rules:
  - backendRefs:
    - name: pocket-id
      port: 1411
    matches:
    - path:
        value: /
